--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.16.0",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@react-spring/web": "^9.7.3",
+    "antd": "^5.19.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
@@ -24,6 +25,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.11",
     "yup": "^1.4.0"
   },
